// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavLinksGroup > renders with links and initially opened 1`] = `
<DocumentFragment>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <button
    class="mantine-focus-auto _control_096153 m_87cf2631 mantine-UnstyledButton-root"
    type="button"
  >
    <div
      class="m_4081bf90 mantine-Group-root"
      style="--group-gap: 0rem; --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
    >
      <div
        class=""
        style="display: flex; align-items: center;"
      >
        <div
          class="m_7341320d mantine-ThemeIcon-root"
          data-variant="light"
          style="--ti-size: calc(1.875rem * var(--mantine-scale)); --ti-bg: var(--mantine-color-blue-light); --ti-color: var(--mantine-color-blue-light-color); --ti-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <svg
            class="tabler-icon tabler-icon-dashboard "
            fill="none"
            height="1.1rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"
            />
            <path
              d="M13.45 11.55l2.05 -2.05"
            />
            <path
              d="M6.4 20a9 9 0 1 1 11.2 0z"
            />
          </svg>
        </div>
        <div
          class=""
          style="margin-left: var(--mantine-spacing-md);"
        >
          Test Group
        </div>
      </div>
      <svg
        class="tabler-icon tabler-icon-chevron-right _chevron_096153"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        style="transform: rotate(90deg);"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 6l6 6l-6 6"
        />
      </svg>
    </div>
  </button>
  <div
    aria-hidden="false"
    class=""
    style="box-sizing: border-box; opacity: 1; transition: opacity 200ms ease;"
  >
    <a
      activeprops="[object Object]"
      class="_link_096153"
      href="/sub1"
    >
      Sub Link 1
    </a>
    <a
      activeprops="[object Object]"
      class="_link_096153"
      href="/sub2"
    >
      Sub Link 2
    </a>
  </div>
</DocumentFragment>
`;

exports[`NavLinksGroup > renders without crashing with basic props 1`] = `
<DocumentFragment>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <a
    activeprops="[object Object]"
    class="_control_096153"
    href="/test"
  >
    <div
      class="m_4081bf90 mantine-Group-root"
      style="--group-gap: 0rem; --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
    >
      <div
        class=""
        style="display: flex; align-items: center;"
      >
        <div
          class="m_7341320d mantine-ThemeIcon-root"
          data-variant="light"
          style="--ti-size: calc(1.875rem * var(--mantine-scale)); --ti-bg: var(--mantine-color-blue-light); --ti-color: var(--mantine-color-blue-light-color); --ti-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <svg
            class="tabler-icon tabler-icon-dashboard "
            fill="none"
            height="1.1rem"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1.1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"
            />
            <path
              d="M13.45 11.55l2.05 -2.05"
            />
            <path
              d="M6.4 20a9 9 0 1 1 11.2 0z"
            />
          </svg>
        </div>
        <div
          class=""
          style="margin-left: var(--mantine-spacing-md);"
        >
          Test Label
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
